// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`magicWall should protect player behind wall 1`] = `
"*asperiores* использовал _Магическая стена_ на *asperiores* с эффектом 150.7
\\[ 📖4 ]
*ratione* пытался атаковать *asperiores*, но у него не получилось
_Магическая стена_ *asperiores*: 📖87
*ratione* пытался атаковать *asperiores*, но у него не получилось
_Магическая стена_ *asperiores*: 📖87"
`;

exports[`magicWall should not cast if behind wall 1`] = `4.8`;

exports[`magicWall should not cast if behind wall 2`] = `
"*asperiores* использовал _Магическая стена_ на *ratione* с эффектом 150.7
\\[ 📖4 ]
*ratione* пытался атаковать *asperiores*, но у него не получилось
_Магическая стена_ *asperiores*"
`;

exports[`magicWall should handle several wall casters 1`] = `
"*asperiores* использовал _Магическая стена_ на *asperiores* с эффектом 150.7
\\[ 📖4 ]
*alias* использовал _Магическая стена_ на *asperiores* с эффектом 150.7
\\[ 📖4 ]
*ratione* пытался атаковать *asperiores*, но у него не получилось
_Магическая стена_ *asperiores*: 📖71,*alias*: 📖0"
`;
